--- a/game.html
+++ b/game.html
@@ -102,6 +102,7 @@
           ) {
             // window._navigateToHomeAfterAd = true;
             showAd();
+            location.replace("index.html");
             return;
           }
         } catch (e) {
